--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -30,11 +30,11 @@
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
                 </a>
                 <a class="apresentacao__links__link" href="https://www.linkedin.com/in/eduardo-oliveira-61b40428a/">
-                    <img src="./Imagens/linkedin.png">
+                    <img src="./linkedin.png">
                     linkedin
                 </a>
                 <a class="apresentacao__links__link" href="https://www.instagram.com/eduardooliveira7677/">
-                    <img src="./Imagens/instagram.png">
+                    <img src="./instagram.png">
                     instagram
                 </a>
             </div>
