--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <p class="apresentacao__conteudo__texto"></p>
         <p class="apresentacao__conteudo__texto"></p>
      </section>
-     <img src="Imagens/imagem.png" alt="Foto da Joana Santos trampando kkkkk">
+     <img src="./imagem.png" alt="Foto da Joana Santos trampando kkkkk">
     </main>
     <footer class="rodape" >
         <p> desenvolvido como experimento por um aluno da Alura</p>
